Odradjen dio pretrazivanja

--- a/userfront/src/app/components/navbar/navbar.component.html
+++ b/userfront/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">Search</a>
+          <a routerLink="/accomodations">Accomodations</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
