--- a/userfront/src/app/components/results/results.component.html
+++ b/userfront/src/app/components/results/results.component.html
@@ -4,7 +4,7 @@
       <th scope="col">User id</th>
       <th scope="col">Id</th>
       <th scope="col">Title</th>
-      <th scope="col">Bodyyyyyheheeeeeeeeeeehyyyyy</th>
+      <th scope="col">Body</th>
     </tr>
   </thead>
   <tbody>
