--- a/admin/admin-front/src/app/home/home.component.html
+++ b/admin/admin-front/src/app/home/home.component.html
@@ -39,10 +39,10 @@
   <div class="col">
     <p class="sm">Use this form below to add a new bucket list goal. What do you want to do with your life?</p>
 
-    <form>
+    <!--form>
       <input type="text" class="txt" name="item" placeholder="Life goal..." [(ngModel)]="goalText">
-      <input type="submit" class="btn" <!--[value]="btnText" (click)="addItem()"-->>
-    </form>
+      <input type="submit" class="btn" <!--[value]="btnText" (click)="addItem()">
+    </form-->
   </div>
   <!--div class="col">
     <p class="life-container" *ngFor="let goal of goals; let i = index" (click)="removeItem(i)">
