--- a/userfront/src/app/components/register/register.component.html
+++ b/userfront/src/app/components/register/register.component.html
@@ -16,6 +16,9 @@
           <div *ngIf="dataUsername.errors?.required && dataUsername.touched" class="alert alert-danger">
             Username is required
           </div>
+          <div *ngIf="!registered" class="alert alert-danger">
+            Username already exists
+          </div>
 
           <div class="form-group">
             <label class=" control-label" for="textinput">First name:</label>
