--- a/admin/admin-front/src/app/login/login.component.html
+++ b/admin/admin-front/src/app/login/login.component.html
@@ -1,12 +1,19 @@
+
+<br />
+<br />
+
 <div class="login-page">
   <div class="form">
     <form #data="ngForm" class="login-form">
       <input type="text" placeholder="username" id="username" [(ngModel)]="data.username" name="username" required/>
       <input type="password" placeholder="password" id="password" [(ngModel)]="data.password" name="password" required/>
-      <input type="submit" value="log in" [disabled]="!data.valid" (click)="submitForm(data)" />
+      <input type="submit" value="log in" [disabled]="!data.valid" (click)="login(data)" />
       <p class="message">Not registered?
         <a routerLink="/register">Create an account</a>
       </p>
     </form>
   </div>
 </div>
+
+<br />
+<br />
